--- a/01_eda.ipynb
+++ b/01_eda.ipynb
@@ -14,8 +14,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0b0fa6a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 2)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load dataset from Data folder\n",
+    "# -------------------------------\n",
+    "df = pd.read_csv(\"Data/sample_training_data.csv\")\n",
+    "\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "717b968f",
    "metadata": {},
    "outputs": [
     {
@@ -82,16 +107,12 @@
        "4  Oil prices soar to all-time record, posing new...      2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Load dataset from Data folder\n",
-    "# -------------------------------\n",
-    "df = pd.read_csv(\"Data/sample_training_data.csv\")\n",
-    "\n",
     "df.head()"
    ]
   },
@@ -235,6 +256,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "2a29d22d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "check some sample text of labels to analyze categories \n",
+      "Label 2\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0    Wall St. Bears Claw Back Into the Black (Reute...\n",
+       "1    Carlyle Looks Toward Commercial Aerospace (Reu...\n",
+       "2    Oil and Economy Cloud Stocks' Outlook (Reuters...\n",
+       "3    Iraq Halts Oil Exports from Main Southern Pipe...\n",
+       "4    Oil prices soar to all-time record, posing new...\n",
+       "Name: text, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"check some sample text of labels to analyze categories \\nLabel 2\\n\")\n",
+    "df[df['label']==2].head(5)['text']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1f688b07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label 3\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "78    'Madden,' 'ESPN' Football Score in Different W...\n",
+       "79    Group to Propose New High-Speed Wireless Forma...\n",
+       "80    AOL to Sell Cheap PCs to Minorities and Senior...\n",
+       "81    Companies Approve New High-Capacity Disc Forma...\n",
+       "82    Missing June Deals Slow to Return for Software...\n",
+       "Name: text, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Label 3\\n\")\n",
+    "df[df['label']==3].head(5)['text']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc5a7696",
+   "metadata": {},
+   "source": [
+    "## Example of categories \n",
+    "**Business Example:**\n",
+    "\"Iraq Halts Oil Exports from Main Southern Pipeline…\"\n",
+    "\n",
+    "**Technology Example:**\n",
+    "\"UK Scientists Allowed to Clone Human Embryos…\"."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "e2fa520b",
    "metadata": {},
@@ -370,12 +475,12 @@
    "id": "ce150b71",
    "metadata": {},
    "source": [
-    "Now check Explore the data after perform the preprocessing "
+    "## Now EDA After Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "2ece29a0",
    "metadata": {},
    "outputs": [],
@@ -387,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5fa4ae9d",
    "metadata": {},
    "outputs": [
@@ -409,8 +514,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf8d46ce",
+   "metadata": {},
+   "source": [
+    "## Histogram Interpret\n",
+    "After preprocessing, most news articles contain between 20 to 32 words.\n",
+    "The histogram shows the distribution of word counts per article.\n",
+    "\n",
+    "**Before preprocessing**, some articles had very high word counts due to:\n",
+    "\n",
+    "- punctuation\n",
+    "- numbers\n",
+    "- repeated words\n",
+    "- noise tokens\n",
+    "\n",
+    "**After preprocessing:**\n",
+    "\n",
+    "- These noisy tokens were removed\n",
+    "- Word count range reduced\n",
+    "- Text became clean and more uniform"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "d685f8ac",
    "metadata": {},
    "outputs": [
@@ -429,6 +557,25 @@
     "sns.boxplot(x=df['label'], y=df['word_count'])\n",
     "plt.title(\"Word Count by Label (After Preprocessing)\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b7f578f",
+   "metadata": {},
+   "source": [
+    "## BoxPlot Interpret\n",
+    "Word Count by Label (After Preprocessing)\n",
+    "Both categories (Label 2 and Label 3) now have similar word-count ranges,\n",
+    "but articles in Label 3 are slightly longer on average compared to Label 2.\n",
+    "\n",
+    "- Label-2 articles mostly fall in 18–30 words\n",
+    "- Label-3 articles mostly fall in 23–32 words\n",
+    "- Few outliers still exist but are acceptable\n",
+    "- Distributions overlap — meaning:\n",
+    "\n",
+    "word-count alone cannot classify articles\n",
+    "text meaning (TF-IDF features) is required"
    ]
   }
  ],
