--- a/03_feature_extraction.ipynb
+++ b/03_feature_extraction.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e67e1974",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
     "# -------------------------------\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y,\n",
-    "    test_size=0.2,\n",
+    "    test_size=0.3,\n",
     "    random_state=42,\n",
     "    stratify=y\n",
     ")\n"
@@ -138,6 +138,17 @@
     "tfidf = TfidfVectorizer(ngram_range=(1,2))\n",
     "X_train_tfidf = tfidf.fit_transform(X_train)\n",
     "X_test_tfidf = tfidf.transform(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab036555",
+   "metadata": {},
+   "source": [
+    "**TF-IDF** converts text into numbers by measuring how important\n",
+    "a word is in a document compared to the whole dataset.\n",
+    "Common words get low score and rare meaningful words get\n",
+    "higher score. This helps the model learn useful patterns."
    ]
   },
   {
@@ -1056,22 +1067,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.85\n",
+      "Accuracy: 0.8333333333333334\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           2       0.84      1.00      0.91        16\n",
-      "           3       1.00      0.25      0.40         4\n",
+      "           2       0.82      1.00      0.90        23\n",
+      "           3       1.00      0.29      0.44         7\n",
       "\n",
-      "    accuracy                           0.85        20\n",
-      "   macro avg       0.92      0.62      0.66        20\n",
-      "weighted avg       0.87      0.85      0.81        20\n",
+      "    accuracy                           0.83        30\n",
+      "   macro avg       0.91      0.64      0.67        30\n",
+      "weighted avg       0.86      0.83      0.80        30\n",
       "\n",
       "\n",
       "Confusion Matrix:\n",
-      " [[16  0]\n",
-      " [ 3  1]]\n"
+      " [[23  0]\n",
+      " [ 5  2]]\n"
      ]
     }
    ],
@@ -1084,26 +1095,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8e47dc2",
+   "metadata": {},
+   "source": [
+    "## Analysis of result\n",
+    "The model achieved an accuracy of 83%.\n",
+    "Business news articles were classified very accurately with Recall = 1.00.\n",
+    "However, Technology articles had a lower Recall (0.29), meaning some Technology news was misclassified as Business.\n",
+    "This happened because the dataset is imbalanced, and Label-2 has more samples than Label-3.\n",
+    "Overall, the model performance is good, but it can be improved by balancing the dataset or training with more Technology articles."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "c85acfbb",
+   "execution_count": null,
+   "id": "b48c284a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2]\n"
+      "oil prices rise as market reacts  ---> Predicted Label: 2\n",
+      "scientists discover new brain technology  ---> Predicted Label: 2\n",
+      "google releases latest AI powered device  ---> Predicted Label: 2\n",
+      "stock market falls after economic slowdown  ---> Predicted Label: 2\n"
      ]
     }
    ],
    "source": [
-    "# Predict new news article\n",
+    "# Predict multiple new news articles\n",
     "# -------------------------------\n",
-    "sample = [\"oil prices rise as market reacts\"]\n",
     "\n",
-    "sample_vec = tfidf.transform(sample)\n",
-    "print(model.predict(sample_vec))\n"
+    "samples = [\n",
+    "    \"oil prices rise as market reacts\",\n",
+    "    \"scientists discover new brain technology\",\n",
+    "    \"google releases latest AI powered device\",\n",
+    "    \"stock market falls after economic slowdown\"\n",
+    "]\n",
+    "\n",
+    "sample_vec = tfidf.transform(samples)\n",
+    "\n",
+    "predictions = model.predict(sample_vec)\n",
+    "\n",
+    "for text, label in zip(samples, predictions):\n",
+    "    print(text, \" ---> Predicted Label:\", label)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "444ea7ad",
+   "metadata": {},
+   "source": [
+    "## Checking on new unseen data\n",
+    "I also tested the model on unseen news headlines.\n",
+    "Business-related headlines were predicted as Label-2\n",
+    "and Technology-related news was predicted as Label-3.\n",
+    "This shows that the model can classify new text correctly."
    ]
   }
  ],
